# libdstruct

./: .gitignore  README.md  TODO.org  autotools.sh  configure.in
src/: Makefile.am  baseio.cpp  ds2xml.cpp  dsbase.h  dsconfig.cpp  dsconfig.h  dsioformat.cpp  dstruct.cpp  dstruct.h  easycheck.h  libdstruct.h  test_dstruct.cpp  xml2ds.cpp
